test/types/partial/bad-managed-init.owned.good
bad-managed-init.chpl:9: In function 'main':
bad-managed-init.chpl:11: error: Cannot coerce 'owned C(real(64),4)' to 'owned C(int(64))' in initialization
